# async-web-scraper-engine

./: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
tests/: test_scraper.py
